--- a/package.json
+++ b/package.json
@@ -14,10 +14,8 @@
   "dependencies": {
     "@angular/common": "~4.0.*",
     "@angular/compiler": "~4.0.*",
-    "@angular/compiler-cli": "~4.0.*",
     "@angular/core": "~4.0.*",
     "@angular/forms": "~4.0.*",
-    "@angular/http": "~4.0.*",
     "@angular/platform-browser": "~4.0.*",
     "@angular/platform-browser-dynamic": "~4.0.*",
     "@angular/platform-server": "~4.0.*",
@@ -32,7 +30,8 @@
   "devDependencies": {
     "@angular/animations": "^4.0.2",
     "@angular/cli": "1.0.0-rc.2",
-    "@angular/compiler-cli": "^2.4.0",
+    "@angular/compiler-cli": "^2.4.10",
+    "@angular/http": "^4.0.3",
     "@types/angular": "^1.5.16",
     "@types/angular-animate": "^1.5.5",
     "@types/angular-cookies": "^1.4.2",
@@ -54,6 +53,7 @@
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
-    "typescript": "^2.*"
+    "typescript": "^2.*",
+    "zone.js": "^0.7.8"
   }
 }
