--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "@angular/common": "~4.0.*",
     "@angular/compiler": "~4.0.*",
+    "@angular/compiler-cli": "~4.0.*",
     "@angular/core": "~4.0.*",
     "@angular/forms": "~4.0.*",
+    "@angular/http": "~4.0.*",
     "@angular/platform-browser": "~4.0.*",
     "@angular/platform-browser-dynamic": "~4.0.*",
     "@angular/platform-server": "~4.0.*",
@@ -24,14 +26,13 @@
     "@angular/upgrade": "~4.0.*",
     "angular-in-memory-web-api": "~0.3.1",
     "core-js": "^2.4.1",
-    "rxjs": "^5.1.*",
-    "zone.js": "^0.7.*"
+    "rxjs": "5.0.1",
+    "systemjs": "0.19.39",
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/animations": "^4.0.2",
-    "@angular/cli": "1.0.0-rc.2",
-    "@angular/compiler-cli": "^2.4.10",
-    "@angular/http": "^4.0.3",
+	"@angular/animations": "^4.0.*",
+    "@angular/cli": "^1.0.1",
     "@types/angular": "^1.5.16",
     "@types/angular-animate": "^1.5.5",
     "@types/angular-cookies": "^1.4.2",
@@ -39,21 +40,32 @@
     "@types/angular-resource": "^1.5.6",
     "@types/angular-route": "^1.3.2",
     "@types/angular-sanitize": "^1.3.3",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "~6.0.60",
-    "codelyzer": "~2.0.0",
-    "jasmine-core": "~2.5.2",
-    "jasmine-spec-reporter": "~3.2.0",
-    "karma": "~1.4.1",
-    "karma-chrome-launcher": "~2.0.0",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
-    "karma-jasmine": "~1.1.0",
+    "@types/jasmine": "2.5.36",
+    "@types/node": "^6.0.45",
+    "babel-cli": "^6.16.0",
+    "babel-preset-angular2": "^0.0.2",
+    "babel-preset-es2015": "^6.16.0",
+    "canonical-path": "0.0.2",
+    "concurrently": "^3.0.0",
+    "http-server": "^0.9.0",
+    "jasmine": "~2.4.1",
+    "jasmine-core": "~2.4.1",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
+    "karma-jasmine": "^1.0.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.0",
-    "ts-node": "~2.0.0",
-    "tslint": "~4.5.0",
-    "typescript": "^2.*",
-    "zone.js": "^0.7.8"
+    "karma-phantomjs-launcher": "^1.0.2",
+    "lite-server": "^2.2.2",
+    "lodash": "^4.16.2",
+    "phantomjs-prebuilt": "^2.1.7",
+    "protractor": "~4.0.14",
+    "rollup": "^0.41.6",
+    "rollup-plugin-commonjs": "^8.0.2",
+    "rollup-plugin-node-resolve": "2.0.0",
+    "rollup-plugin-uglify": "^1.0.1",
+    "source-map-explorer": "^1.3.2",
+    "tslint": "^4.0.*",
+    "typescript": "~2.2.*"
   }
 }
